--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrittonWeb | Hand-Coded Websites</title>
+  <title>BrittonWeb | Custom Websites for Small Businesses</title>
+  <meta name="description" content="BrittonWeb builds fast, SEO-friendly, mobile-responsive websites for small businesses in Sterling, Kansas and beyond.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,72 +12,73 @@
     <nav>
       <h1>BrittonWeb</h1>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/services.html">Services</a></li>
+        <li><a href="/portfolio.html">Portfolio</a></li>
+        <li><a href="/quote.html">Get a Quote</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="hero">
-      <h2>Hand-Coded Websites for Local Businesses</h2>
-      <p>Fast, modern, and mobile-friendly websites — built from scratch, just for you.</p>
-      <a href="#contact" class="cta">Let's Work Together</a>
+      <h2>Custom Websites for Local Businesses</h2>
+      <p>Fast, mobile-friendly, SEO-ready websites built from scratch for small businesses in Sterling and beyond.</p>
+      <div class="hero-buttons">
+        <a href="/quote.html" class="cta">Request a Quote</a>
+        <a href="/portfolio.html" class="cta-alt">View Portfolio</a>
+      </div>
     </div>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a 17-year-old web developer from Sterling, Kansas, passionate about building fast, modern websites with real code — no page builders or templates. I started BrittonWeb to help small businesses get online with clean, custom-coded sites that stand out. Whether you're a gym, a barber, or a family-run shop, I can help you look professional on the web.</p>
+  <section id="overview">
+    <h2>What We Do</h2>
+    <p>BrittonWeb creates modern, hand-coded websites tailored to your business goals. Whether you're a gym, barbershop, or local service provider, we’ll help you make a strong impression online with clean design, responsive layouts, and strong SEO foundations.</p>
   </section>
 
-  <section id="services">
-    <h2>Services</h2>
+  <section id="services-preview">
+    <h2>Popular Packages</h2>
     <div class="service-list">
       <div class="service">
         <h3>1-Page Website</h3>
-        <p>Perfect for local businesses who need a clean, mobile-friendly site to get started.</p>
+        <p>Great for quick online presence. Clean, fast, and professional.</p>
         <span>$200</span>
       </div>
       <div class="service">
-        <h3>Multi-Page Website</h3>
-        <p>Great for businesses that want more details — includes up to 5 custom-coded pages.</p>
+        <h3>Full Website (3–5 Pages)</h3>
+        <p>Perfect for established businesses needing multiple sections.</p>
         <span>$450</span>
       </div>
       <div class="service">
         <h3>Monthly Maintenance</h3>
-        <p>Keep your site updated, secure, and running smoothly with monthly changes or edits.</p>
+        <p>Edits, updates, and technical help. Cancel anytime.</p>
         <span>$40/month</span>
       </div>
     </div>
+    <p class="center-link"><a href="/services.html">View Full Services</a></p>
   </section>
 
-  <section id="portfolio">
-    <h2>Portfolio</h2>
+  <section id="portfolio-preview">
+    <h2>Sample Projects</h2>
     <div class="projects">
       <div class="project">
         <img src="https://via.placeholder.com/400x250?text=Gym+Website" alt="Gym Website Demo">
         <h3>Gym Website</h3>
-        <p>A sleek, modern website made for a fictional local gym.</p>
-        <a href="#">View Demo</a>
+        <p>A high-energy site for a local fitness center.</p>
+        <a href="/portfolio.html">View More</a>
       </div>
       <div class="project">
         <img src="https://via.placeholder.com/400x250?text=Barbershop+Website" alt="Barbershop Website Demo">
         <h3>Barbershop Website</h3>
-        <p>A stylish site designed for a classic barbershop experience.</p>
-        <a href="#">View Demo</a>
+        <p>Classy design for a traditional-style barbershop.</p>
+        <a href="/portfolio.html">View More</a>
       </div>
     </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <form name="contact" method="POST" data-netlify="true">
-      <input type="hidden" name="form-name" value="contact">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+  <section id="quote-preview">
+    <h2>Ready to Get Started?</h2>
+    <p>It only takes a minute to request a quote. No pressure, no commitment — just fast, friendly web design help.</p>
+    <a href="/quote.html" class="cta">Get a Free Quote</a>
   </section>
 
   <footer>
