Style Changes to every page, added images folder

--- a/services.html
+++ b/services.html
@@ -10,7 +10,9 @@
 <body>
   <header>
     <nav>
-      <h1>BrittonWeb</h1>
+        <a href="/index.html" >
+          <img src="/images/HeaderWhiteLogo.png" alt="BrittonWeb" width="180" height="60">
+        </a>
       <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
@@ -20,10 +22,10 @@
         <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="hero">
-      <h2>Website Packages & Pricing</h2>
-    </div>
   </header>
+  <div class="hero">
+    <h2>Website Packages & Pricing</h2>
+  </div>
 
   <main>
     <section class="services">
@@ -76,16 +78,21 @@
             <li>Built by hand – no templates or page builders</li>
           </ul>
         </div>
-
+      <br>
         <p><a href="/quote.html" class="cta">Start Your Project</a></p>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 BrittonWeb. Built with HTML & CSS by Leland Britton.</p>
-    <div class="socials">
-      <a href="mailto:leebritton98@gmail.com">Email</a>
+    <div class="footer-logo">
+      <img src="/images/HeaderWhiteLogo.png" height="60" width="180">
+    </div>
+    <div class="footer-copy">
+      <p>&copy; 2025 BrittonWeb</p>
+    </div>
+    <div class="footer-socials">
+      <a href="/contact.html">Contact</a>
       <a href="https://github.com/lelandbritton">GitHub</a>
     </div>
   </footer>
