--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrittonWeb | Custom Websites for Small Businesses</title>
+  <title>BrittonWeb | Custom Websites</title>
   <meta name="description" content="BrittonWeb builds fast, SEO-friendly, mobile-responsive websites for small businesses in Sterling, Kansas and beyond.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <h1>BrittonWeb</h1>
+        <a href="/index.html" >
+          <img src="/images/HeaderWhiteLogo.png" alt="BrittonWeb" width="180" height="60">
+        </a>
       <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
@@ -20,19 +22,19 @@
         <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="hero">
-      <h2>Custom Websites for Local Businesses</h2>
-      <p>Fast, mobile-friendly, SEO-ready websites built from scratch for small businesses in Sterling and beyond.</p>
-      <div class="hero-buttons">
-        <a href="/quote.html" class="cta">Request a Quote</a>
-        <a href="/portfolio.html" class="cta-alt">View Portfolio</a>
-      </div>
-    </div>
   </header>
-
+  <div class="hero">
+    <h2>Make a Custom Site for Your Business</h2>
+    <p>Fast, mobile-friendly, SEO-ready websites built from scratch for businesses in Sterling and beyond.</p>
+    <div class="hero-buttons">
+      <a href="/quote.html" class="cta">Request a Quote</a>
+      <a href="/portfolio.html" class="cta-alt">View Portfolio</a>
+    </div>
+  </div>
+  
   <section id="overview">
-    <h2>What We Do</h2>
-    <p>BrittonWeb creates modern, hand-coded websites tailored to your business goals. Whether you're a gym, barbershop, or local service provider, we’ll help you make a strong impression online with clean design, responsive layouts, and strong SEO foundations.</p>
+    <h2>What I Do</h2>
+    <p>BrittonWeb creates modern, hand-coded websites tailored to your business goals. Whether you're a gym, barbershop, or local service provider, I'll help you make a strong impression online with clean design, responsive layouts, and strong SEO foundations.</p>
   </section>
 
   <section id="services-preview">
@@ -61,13 +63,13 @@
     <h2>Sample Projects</h2>
     <div class="projects">
       <div class="project">
-        <img src="https://via.placeholder.com/400x250?text=Gym+Website" alt="Gym Website Demo">
+        <img src="/images/gymspace.jpg" alt="Gym Website Demo">
         <h3>Gym Website</h3>
         <p>A high-energy site for a local fitness center.</p>
         <a href="/portfolio.html">View More</a>
       </div>
       <div class="project">
-        <img src="https://via.placeholder.com/400x250?text=Barbershop+Website" alt="Barbershop Website Demo">
+        <img src="/images/barbershop.jpeg" alt="Barbershop Website Demo">
         <h3>Barbershop Website</h3>
         <p>Classy design for a traditional-style barbershop.</p>
         <a href="/portfolio.html">View More</a>
@@ -75,16 +77,22 @@
     </div>
   </section>
 
-  <section id="quote-preview">
+  <section class="quote-cta">
     <h2>Ready to Get Started?</h2>
     <p>It only takes a minute to request a quote. No pressure, no commitment — just fast, friendly web design help.</p>
+    <br>
     <a href="/quote.html" class="cta">Get a Free Quote</a>
   </section>
 
   <footer>
-    <p>&copy; 2025 BrittonWeb. Built with HTML & CSS by Leland Britton.</p>
-    <div class="socials">
-      <a href="mailto:leebritton98@gmail.com">Email</a>
+    <div class="footer-logo">
+      <img src="/images/HeaderWhiteLogo.png" height="60" width="180">
+    </div>
+    <div class="footer-copy">
+      <p>&copy; 2025 BrittonWeb</p>
+    </div>
+    <div class="footer-socials">
+      <a href="/contact.html">Contact</a>
       <a href="https://github.com/lelandbritton">GitHub</a>
     </div>
   </footer>
