--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,9 @@
 <body>
   <header>
     <nav>
-      <h1>BrittonWeb</h1>
+        <a href="/index.html" >
+          <img src="/images/HeaderWhiteLogo.png" alt="BrittonWeb" width="180" height="60">
+        </a>
       <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
@@ -20,11 +22,11 @@
         <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="hero">
-      <h2>Portfolio</h2>
-      <p>See examples of custom websites I've created for fictional local businesses.</p>
-    </div>
   </header>
+  <div class="hero">
+    <h2>Portfolio</h2>
+    <p>See examples of custom websites I've created for fictional local businesses.</p>
+  </div>
 
   <main>
     <section class="projects">
@@ -47,14 +49,19 @@
 
     <section class="quote-cta">
       <h3>Want a site like this for your business?</h3>
-      <a href="/quote.html" class="cta">Get a Free Quote</a>
+        <a href="/quote.html" class="cta">Get a Free Quote</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 BrittonWeb. Built with HTML & CSS by Leland Britton.</p>
-    <div class="socials">
-      <a href="mailto:leebritton98@gmail.com">Email</a>
+    <div class="footer-logo">
+      <img src="/images/HeaderWhiteLogo.png" height="60" width="180">
+    </div>
+    <div class="footer-copy">
+      <p>&copy; 2025 BrittonWeb</p>
+    </div>
+    <div class="footer-socials">
+      <a href="/contact.html">Contact</a>
       <a href="https://github.com/lelandbritton">GitHub</a>
     </div>
   </footer>
