--- a/services.html
+++ b/services.html
@@ -5,23 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services | BrittonWeb</title>
   <meta name="description" content="Explore BrittonWeb's website services including 1-page sites, full business sites, and monthly maintenance packages.">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+ <header>
     <nav>
         <a href="/index.html" >
           <img src="/images/HeaderWhiteLogo.png" alt="BrittonWeb" width="180" height="60">
         </a>
-      <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/services.html">Services</a></li>
-        <li><a href="/portfolio.html">Portfolio</a></li>
-        <li><a href="/quote.html">Get a Quote</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </ul>
-    </nav>
+        <div class="nav__menu" id="nav-menu">
+          <ul class ="nav__list">
+            <li><a href="/index.html" class="nav__link">Home</a></li>
+            <li><a href="/about.html" class="nav__link">About</a></li>
+            <li><a href="/services.html" class="nav__link">Services</a></li>
+            <li><a href="/portfolio.html" class="nav__link">Portfolio</a></li>
+            <li><a href="/quote.html" class="nav__link">Get a Quote</a></li>
+            <li><a href="/contact.html" class="nav__link">Contact</a></li>
+          </ul>
+        </div>
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-menu-line nav__burger"></i>
+          <i class="ri-close-line nav__close"></i>
+        </div>
+      </nav>
   </header>
   <div class="hero">
     <h2>Website Packages & Pricing</h2>
@@ -96,5 +103,6 @@
       <a href="https://github.com/lelandbritton">GitHub</a>
     </div>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
