--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -6,7 +6,7 @@
   <title>BrittonWeb | Custom Websites</title>
   <meta name="description" content="BrittonWeb builds fast, SEO-friendly, mobile-responsive websites for small businesses in Sterling, Kansas and beyond.">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header>
@@ -40,7 +40,7 @@
   <main>
     <section class="contact-form">
       <div class="container">
-        <form id="contact" method="POST" data-netlify="true" action="/thanks">
+        <form id="contact" method="post" data-netlify="true" action="/thanks">
           <input type="hidden" name="form-name" value="contact">
 
           <label for="name">Your Name</label>
@@ -78,4 +78,4 @@
       <a href="/contact">Contact</a>
       <a href="https://github.com/lelandbritton">GitHub</a>
   </footer>
-  <script src="navbar.js"></script>
+  <script src="/navbar.js"></script>
